--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "minimist": "^1.2.6",
     "mongoose": "^6.5.5"
   }
 }
