--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "desafio09-login",
+  "name": "desafio11-object-process",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "0x server.js",
+    "test": "node autocannon.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autocannon": "^7.10.0",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -19,6 +20,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "minimist": "^1.2.6",
-    "mongoose": "^6.5.5"
+    "mongoose": "^6.5.5",
+    "pino": "^8.6.1"
   }
 }
